# cpp-interpolation-toolbox

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/html/: annotated.html  annotated_dup.js  class_interpolator-members.html  class_interpolator.html  class_interpolator.js  class_interpolator1_d-members.html  class_interpolator1_d.html  class_interpolator1_d.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  hierarchy.html  hierarchy.js  index.html  inherits.html  interpol_8h.html  interpol_8h.js  interpol_8h__incl.map  interpol_8h__incl.md5  interpol_8h_source.html  interpolator1d_8cpp.html  interpolator1d_8cpp__incl.map  interpolator1d_8cpp__incl.md5  interpolator1d_8h.html  interpolator1d_8h__dep__incl.map  interpolator1d_8h__dep__incl.md5  interpolator1d_8h__incl.map  interpolator1d_8h__incl.md5  interpolator1d_8h_source.html  (+19 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js
example/: ex_interpol1d_1.cpp
include/: utils.h
src/: CMakeLists.txt  interpolator.cpp  interpolator1d.cpp
tests/: CMakeLists.txt  test_interp1d.cpp
